<resources>
    <string name="app_name">Project1</string>
    <string name="more_info">More Information</string>
    <string name="less_info">Less Information</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ticket_name">Name<font color='#3CA6DA'>*</font></string>
    <string name="ticket_email">Email<font color='#3CA6DA'>*</font></string>
    <string name="description">Description<font color='#3CA6DA'>*</font></string>
    <string name="ticket_subject">Subject<font color='#3CA6DA'>*</font></string>
    <string name="ticket_message">Message<font color='#3CA6DA'>*</font></string>
    <string name="Text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonu</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="recruiter_name">First Name<font color='#3CA6DA'>*</font></string>
    <string name="recruiter_lastname">Last Name<font color='#3CA6DA'>*</font></string>
    <string name="Email">Email<font color='#3CA6DA'>*</font></string>
    <string name="Contact_number">Contact Number<font color='#3CA6DA'>*</font></string>
    <string name="address">Address<font color='#3CA6DA'>*</font></string>
    <string name="city">City<font color='#3CA6DA'>*</font></string>
    <string name="ZipCode">Zip Code<font color='#3CA6DA'>*</font></string>
    <string name="State">State<font color='#3CA6DA'>*</font></string>
    <string name="Country">Country<font color='#3CA6DA'>*</font></string>
    <string name="designation">Designation<font color='#3CA6DA'>*</font></string>
    <string name="comny_name">Company Name<font color='#3CA6DA'>*</font></string>
    <string name="firstname">First Name<font color='#3CA6DA'>*</font></string>
    <string name="streetAddress">Street Address<font color='#3CA6DA'>*</font></string>
    <string name="postalcode">Postal Code<font color='#3CA6DA'>*</font></string>
    <string name="qualification">Qualification<font color='#3CA6DA'>*</font></string>
    <string name="yrofpassing">Year of passing<font color='#3CA6DA'>*</font></string>
    <string name="experience">Experience<font color='#3CA6DA'>*</font></string>
    <string name="skills">Skills<font color='#3CA6DA'>*</font></string>
    <string name="password">Password<font color='#3CA6DA'>*</font></string>
    <string name="repeatpasswrd">Repeat Password<font color='#3CA6DA'>*</font></string>
    <string name="positiontitle">Position Title<font color='#3CA6DA'>*</font></string>
    <string name="Datefrom">Date from<font color='#3CA6DA'>*</font></string>
    <string name="dateto">Date to<font color='#3CA6DA'>*</font></string>

    <string name="noti_title1">notify</string>
    <string name="noti_title2">notigy</string>
    <string name="noti_title3">apply complete</string>
    <string name="noti_title4">Application seen</string>
    <string name="noti_title5">Interview</string>
    <string name="noti_title6">Onboarding Begins!</string>
    <string name="noti_body1">x</string>
    <string name="noti_body2">y</string>
    <string name="noti_body3">Congratulations you have applied for the job!</string>
    <string name="noti_body5">You are selected for interview</string>
    <string name="noti_body4">Recruiter has seen your application</string>
    <string name="noti_body6">Congratulations! you have made it. Just a few more steps and then you can party hard for your new job!</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="tickettype">
        <item>type1</item>
        <item>type2</item>
        <item>type3</item>
    </string-array>
    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="country">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>China</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>North Korea</item>
        <item>Northern Marianas</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Russia</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Zimbabwe</item>
    </string-array>

    <string-array name="files">
        <item>Documents</item>
        <item>Task files</item>
    </string-array>

    //for timer
    <string name="timer">00:00:00</string>

</resources>