<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/con_per_scroll">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="101dp"

                    android:layout_marginTop="43dp"
                    android:layout_marginEnd="97dp"
                    android:text="Personal Information"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="52dp"
                    android:layout_height="51dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="37dp"

                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="67dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="53dp"
                        android:layout_height="53dp"
                        android:layout_marginEnd="329dp"
                        android:layout_marginBottom="67dp"
                        app:srcCompat="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView44">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="98dp"
                        android:layout_height="98dp"

                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="@color/light_grey"
                        app:cardBackgroundColor="@color/light_grey"
                        app:cardCornerRadius="250dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:src="@drawable/iconfinder_general_office_34_3592855" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="230dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="152dp"
                        app:cardBackgroundColor="@color/text_blue"
                        app:cardCornerRadius="250dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="29dp"
                            android:layout_height="29dp"
                            android:src="@drawable/add" />

                    </androidx.cardview.widget.CardView>




                </androidx.constraintlayout.widget.ConstraintLayout>


            </RelativeLayout>


            <TextView
                android:id="@+id/recruiter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recruiter_name"
                android:textSize="14dp"
                android:layout_marginStart="26dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <EditText
                android:id="@+id/recruiterNameET"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Enter First Name"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/background"
                android:paddingLeft="29dp"/>

            <TextView
                android:id="@+id/recruiterLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recruiter_lastname"
                android:layout_marginTop="34dp"
                android:layout_marginStart="26dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <EditText
                android:id="@+id/recruiterLastNameET"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Enter Last Name"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/background"
                android:paddingLeft="29dp"/>

            <TextView
                android:id="@+id/recruiterStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Status"
                android:layout_marginStart="26dp"
                android:layout_marginTop="34dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <Spinner
                android:id="@+id/recruiterStatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:foreground="@drawable/background"/>

            <TextView
                android:id="@+id/recruiterMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:layout_marginStart="26dp"
                android:layout_marginTop="34dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <EditText
                android:id="@+id/recruiterMailET"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="Enter main email ID"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/background"
                android:paddingLeft="29dp"/>

            <TextView
                android:id="@+id/recruiterContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Contact_number"
                android:layout_marginStart="26dp"
                android:layout_marginTop="34dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>
            <EditText
                android:id="@+id/editTextPhone2"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="phone"
                android:hint="Enter 10 digit number"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/background"
                android:paddingLeft="29dp"/>


            <TextView
                android:id="@+id/textView153"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Contact Number"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="right"
                android:textSize="17dp"
                android:textColor="@color/text_blue"
                android:drawableRight="@drawable/add_icon"
                android:drawablePadding="4dp"/>


            <TextView
                android:id="@+id/recruiterAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginTop="15dp"
                android:layout_marginStart="26dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <EditText
                android:id="@+id/recruiterAddressEditTextET"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Enter address"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/background"
                android:paddingLeft="29dp"/>

            <TextView
                android:id="@+id/recruiterCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_marginStart="26dp"
                android:layout_marginTop="34dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <EditText
                android:id="@+id/recruiterCityET"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="City name"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/background"
                android:paddingLeft="29dp"/>

            <TextView
                android:id="@+id/ZipcodeOfRecruiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ZipCode"
                android:layout_marginTop="34dp"
                android:layout_marginStart="26dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <EditText
                android:id="@+id/ZipCodeET"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Enter zipcode of the city"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/background"
                android:paddingLeft="29dp"/>

            <TextView
                android:id="@+id/RecruiterState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/State"
                android:layout_marginStart="26dp"
                android:layout_marginTop="34dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <Spinner
                android:id="@+id/recruiterStateSpinner"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:textColor="@color/text_blue"
                android:layout_marginTop="14dp"
                android:foreground="@drawable/background"/>

            <TextView
                android:id="@+id/recruiterCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Country"
                android:textSize="14dp"
                android:layout_marginTop="34dp"
                android:layout_marginStart="26dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_semibold"/>

            <Spinner
                android:id="@+id/recruiterCountrySpinner"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="14dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:textColor="@color/text_blue"
                android:foreground="@drawable/background"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:id="@+id/ct_dot1"
                    app:cardBackgroundColor="@color/text_blue"
                    app:cardCornerRadius="250dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:id="@+id/ct_dot2"
                    android:layout_toEndOf="@id/ct_dot1"
                    android:foreground="@drawable/background"
                    app:cardCornerRadius="250dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>


            </RelativeLayout>




            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="53dp"
                android:layout_marginBottom="93dp"
                android:layout_marginStart="31dp"
                android:layout_marginEnd="26dp"
                android:text="Next"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:background="@drawable/background_solid"
                android:textAllCaps="false"
                android:drawableRight="@drawable/next_icon"
                android:textAlignment="textEnd"
                android:drawablePadding="12dp"
                android:paddingRight="140dp"/>

        </LinearLayout>

    </FrameLayout>
</ScrollView>